[package]
name = "scottish_names"
description = "Library for generating random names of people based on frequency of occurrence of birth-names in Scotland"
repository = "https://github.com/sroebuck/scottish_names"
keywords = ["random", "names", "scottish"]
license = "MIT"
version = "0.2.2"
authors = ["Stuart Roebuck <stuart.roebuck@gmail.com>"]
edition = "2018"
build = "build.rs"
readme = "README.md"

[build-dependencies]
csv = "1.0.6"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
rand = "0.7.2"